fixed bug with basket loading page

--- a/src/features/header/Header.scss
+++ b/src/features/header/Header.scss
@@ -4,6 +4,10 @@
     bottom: auto !important;
 }
 
+.basket-btn {
+    background-color: #fff !important;
+}
+
 .breadcrumb-text {
     text-transform: capitalize;
 }
